--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sheet.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Document</title>
 </head>
 
@@ -54,15 +55,18 @@
 
 
 
-
     <!--CECI EST TOUTE LA PARTIE RELATIF A L'AFFICHAGE DES HEBERGEMENTS - DEBUT!!!-->
-
-    <i class="info_right">Hébergements à Paris</i> <i class="info_left">Les plus populaires</i>
 
     <br><br>
 
     <!--CEST LA PARTIE DE DROITE POUR LES PLUS POPULAIRES- DEBUT-->
     <div class="lpp">
+
+        <div class="right_populaire">
+
+            <i class="info_left">Les plus populaires</i>
+
+        </div>
 
         <figure>
             <img src="/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="appart_reise" height="200px" width="200px">
@@ -94,6 +98,12 @@
     <!--CEST LA PARTIE DE GAUCHE POUR LES  HEBERGEMENT- DEBUT-->
 
     <div class="flex-container">
+
+        <div class="left_populaire">
+
+            <i class="info_right">Hébergements à Paris</i>
+
+        </div>
 
         <figure class="flex-child">
 
@@ -150,11 +160,12 @@
 
     <br><br><br><br><br><br><br><br><br>
 
-    <i>
-        Activités à Marseille
-    </i>
+
     <div class="activites">
 
+        <i>
+                    Activités à Marseille
+                </i>
 
         <figure>
             <img src="/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="florian" height="200px" width="200px">
